--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 android/local.properties
@@ -31,15 +30,17 @@ android/local.properties
 
 # node.js
 #
-node_modules/
+/shedule/node_modules/
 npm-debug.log
 yarn-error.log
 
 # BUCK
-buck-out/
+/shedule/buck-out/
 \.buckd/
 *.keystore
 !debug.keystore
+
+../backend/node_modules
 
 # fastlane
 #
@@ -57,3 +58,4 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+/backend/node_modules/
